# api/controllers/favorites.js
@@ -2,6 +2,23 @@
 const SwaggerExpress = require('swagger-express-mw');
 const jwt = require('jsonwebtoken');
 
+function favCheeseMaker(arrOfCheeses) {
+  let finalArr =[]
+  for (var i = 0; i < arrOfCheeses.length; i++) {
+    let cheeseObj = {
+      animal: arrOfCheeses[i].animal,
+      cheese_id: arrOfCheeses[i].cheese_id,
+      favorite_id: arrOfCheeses[i].id,
+      firmness: arrOfCheeses[i].firmness,
+      notes: arrOfCheeses[i].notes,
+      name: arrOfCheeses[i].name,
+      user_id:arrOfCheeses[i].user_id
+    }
+  finalArr.push(cheeseObj)
+  }
+  return finalArr
+}
+
 function getFavorites(req, res) {
   const knex = require('../../knex.js');
   jwt.verify(req.body.token, process.env.JWT_KEY, (err, payload) => {
@@ -14,11 +31,12 @@ function getFavorites(req, res) {
     .join('cheeses', 'cheeses.id', '=', 'favorites.cheese_id')
     .join('animals', 'animals.id', '=', 'cheeses.animal_id')
     .join('firmness', 'firmness.id', '=', 'cheeses.firmness_id')
-    .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'cheeses.id', 'favorites.user_id', 'favorites.id', 'favorites.notes')
+    .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'favorites.cheese_id', 'favorites.user_id', 'favorites.id', 'favorites.notes')
     .where('users.id', '=', payload.userId)
     .then((favorites) => {
+      let cheeseToSend = favCheeseMaker(favorites)
       res.set('Content-Type', 'application/json');
-      res.status(200).json(favorites);
+      res.status(200).json(cheeseToSend);
     }).catch((err) => { console.error(err) });
   })
 }
@@ -35,21 +53,33 @@ function addFavorites(req, res) {
     .insert({
       user_id: payload.userId,
       cheese_id: cheeseID
-    }).then(() => {
+    }, '*')
+    .then((idHere) => {
       return knex('favorites')
-      .join('users', 'users.id', '=', 'favorites.user_id')
-      .join('cheeses', 'cheeses.id', '=', 'favorites.cheese_id')
-      .join('animals', 'animals.id', '=', 'cheeses.animal_id')
-      .join('firmness', 'firmness.id', '=', 'cheeses.firmness_id')
-      .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'cheeses.id', 'favorites.user_id', 'favorites.favorite_id', 'favorites.notes')
-      .where('users.id', '=', payload.userId)
-      .andWhere('favorites.cheese_id', '=', cheeseID);
+          .join('users', 'users.id', '=', 'favorites.user_id')
+          .join('cheeses', 'cheeses.id', '=', 'favorites.cheese_id')
+          .join('animals', 'animals.id', '=', 'cheeses.animal_id')
+          .join('firmness', 'firmness.id', '=', 'cheeses.firmness_id')
+          .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'favorites.cheese_id', 'favorites.user_id', 'favorites.id', 'favorites.notes')
+          .where('favorites.id', idHere[0].id)
     })
     .then((newFavorite) => {
+      let favorite = [{
+        favorite_id: newFavorite[0].id,
+        name: newFavorite[0].name,
+        firmness: newFavorite[0].firmness,
+        animal: newFavorite[0].animal,
+        cheese_id: newFavorite[0].cheese_id,
+        user_id: newFavorite[0].user_id,
+        notes: newFavorite[0].notes
+      }]
       res.set('Content-Type', 'application/json');
-      res.status(200).json(newFavorite);
+      res.status(200).json(favorite);
     })
-  }).catch((err) => { console.error(err) });
+    .catch((error) => {
+      console.error(error)
+    });
+  })
 }
 
 function addFavoritesNote(req, res) {
@@ -60,23 +90,32 @@ function addFavoritesNote(req, res) {
       res.status(401).send('Unauthorized');
     }
     const favoriteId = req.body.favorite_id;
-    const newNote = req.body.note;
+    const newNote = req.body.notes;
     knex('favorites')
     .where('favorites.id', '=', favoriteId)
     .update({
-      note: newNote
+      notes: newNote
     }).then((updatedFavorite) => {
       return knex('favorites')
       .join('users', 'users.id', '=', 'favorites.user_id')
       .join('cheeses', 'cheeses.id', '=', 'favorites.cheese_id')
       .join('animals', 'animals.id', '=', 'cheeses.animal_id')
       .join('firmness', 'firmness.id', '=', 'cheeses.firmness_id')
-      .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'cheeses.id', 'favorites.user_id', 'favorites.favorite_id', 'favorites.note')
+      .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'favorites.cheese_id', 'favorites.user_id', 'favorites.id', 'favorites.notes')
       .where('favorites.id', '=', favoriteId);
     })
-    .then((newFavorite) => {
+    .then((newNote) => {
+      let cheeseWithNote = [{
+        favorite_id: newNote[0].id,
+        name: newNote[0].name,
+        firmness: newNote[0].firmness,
+        animal: newNote[0].animal,
+        cheese_id: newNote[0].cheese_id,
+        user_id: newNote[0].user_id,
+        notes: newNote[0].notes
+      }]
       res.set('Content-Type', 'application/json');
-      res.status(200).json(newFavorite);
+      res.status(200).json(cheeseWithNote);
     }).catch((err) => { console.error(err); })
   })
 }
@@ -89,26 +128,34 @@ function deleteFavorites(req, res) {
       res.status(401).send('Unauthorized');
     }
     const favToDelete = req.body.favorite_id;
-    knex('favorites')
-    .where('favorites.id', '=', favToDelete)
-    .del()
-    .then(() => {
       knex('favorites')
       .join('users', 'users.id', '=', 'favorites.user_id')
       .join('cheeses', 'cheeses.id', '=', 'favorites.cheese_id')
       .join('animals', 'animals.id', '=', 'cheeses.animal_id')
       .join('firmness', 'firmness.id', '=', 'cheeses.firmness_id')
-      .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'cheeses.id', 'favorites.user_id', 'favorites.favorite_id', 'favorites.note')
+      .select('cheeses.name', 'animals.animal', 'firmness.firmness', 'favorites.cheese_id', 'favorites.user_id', 'favorites.id', 'favorites.notes')
       .where('favorites.id', '=', favToDelete)
       .then((deletedFavorite) => {
-        res.set('Content-Type', 'application/json');
-        res.status(200).json(deletedFavorite);
-      }).catch((err) => {
-        console.error(err);
+        knex('favorites').where('favorites.id', '=', favToDelete).del()
+        let deletedCheese = [{
+          favorite_id: deletedFavorite[0].id,
+          name: deletedFavorite[0].name,
+          firmness: deletedFavorite[0].firmness,
+          animal: deletedFavorite[0].animal,
+          cheese_id: deletedFavorite[0].cheese_id,
+          user_id: deletedFavorite[0].user_id,
+          notes: deletedFavorite[0].notes
+        }]
+        return deletedCheese
       })
+      .then((sendDeleteCheese) => {
+        res.set('Content-Type', 'application/json');
+        res.status(200).json(sendDeleteCheese);
+      })
+      .catch((err) => {
+        console.error(err);
     })
-
-  }).catch((err) => { console.error(err) });
+  })
 }
 
 module.exports = {
